--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-virtual": "^3.13.12",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-window": "^1.8.7"
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
