--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tanstack/react-virtual": "^3.13.12",
+    "gtag": "^1.0.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
