--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -24,8 +24,23 @@ jobs:
             script: |
               set -e
 
-              echo "[0] Esperando 30 segundos para evitar conflictos con backend..."
-              sleep 30
+              echo "[0] Esperando a que el backend esté completamente desplegado..."
+              # Esperar señal del backend o timeout después de 5 minutos
+              timeout=300
+              elapsed=0
+              while [ $elapsed -lt $timeout ]; do
+                if [ -f /tmp/backend-deploy-complete ]; then
+                  echo "Backend deployment detectado, continuando..."
+                  break
+                fi
+                if curl -s http://localhost:3001/health > /dev/null 2>&1 || curl -s http://localhost:3001 > /dev/null 2>&1; then
+                  echo "API del backend respondiendo, continuando..."
+                  break
+                fi
+                echo "Esperando backend... ($elapsed/$timeout segundos)"
+                sleep 10
+                elapsed=$((elapsed + 10))
+              done
               
               echo "[1] Preparando entorno Node..."
               # IMPORTANTE: exportar el PATH donde vive node/npm/pm2 en tu VPS
@@ -47,4 +62,16 @@ jobs:
               echo "[6] Recargando nginx..."
               systemctl reload nginx
 
-              echo "[OK] Frontend actualizado y desplegado."
+              echo "[7] Verificando conectividad frontend-backend..."
+              sleep 5
+              # Test básico de conectividad
+              if curl -s http://localhost:3001 > /dev/null 2>&1; then
+                echo "✓ Backend accesible desde frontend"
+              else
+                echo "⚠ Warning: Backend no accesible, puede requerir intervención manual"
+              fi
+
+              echo "[8] Limpiando archivos temporales..."
+              rm -f /tmp/backend-deploy-complete
+
+              echo "[OK] Frontend actualizado y desplegado correctamente."
