🚨 CRITICAL FIX: Resolve git merge conflicts during deploy
- Added git stash and reset --hard before pull
- This fixes the 'robots.txt would be overwritten' error
- Deploy was failing at step [1] and never reaching nginx config
- Added git status debugging to monitor future conflicts
- This should finally allow the deploy to complete fully

--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -43,6 +43,16 @@ jobs:
 
               echo "[1] Actualizando frontend..."
               cd /var/app/frontend
+              
+              echo "DEBUG: Estado de git antes de actualizar:"
+              git status
+              
+              echo "DEBUG: Limpiando cambios locales para evitar conflictos..."
+              git stash push -m "Auto-stash before deploy $(date)"
+              git reset --hard HEAD
+              git clean -fd
+              
+              echo "DEBUG: Pulling desde origin main..."
               git pull origin main
 
               echo "[2] Instalando dependencias..."
