--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@tanstack/react-virtual": "^3.13.12",
     "gtag": "^1.0.1",
+    "hls.js": "^1.6.14",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
