--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@tanstack/react-virtual": "^3.13.12",
+    "fuse.js": "^7.1.0",
     "gtag": "^1.0.1",
     "hls.js": "^1.6.14",
     "react": "^19.2.0",
